<resources>
    <string name="app_name">人脸识别门禁</string>
    <string name="welcomeactivity_button_start">开始使用</string>
    <string name="welcomeactivity_button_tutor">使用说明</string>
    <string name="noadminmainactivity_button_register">注册用户</string>
    <string name="noadminmainactivity_button_recognize">识别用户</string>
    <string name="noadminmainactivity_button_adminlogin">管理员登陆</string>
    <string name="noadminmainactivity_label_title">用户模式</string>
    <string name="noadminmainactivity_textview_noticebar">通知栏</string>
    <string name="toolbar_home">起始页</string>
    <string name="toolbar_back">返回上一页</string>
    <string name="toolbar_tutor">教程</string>
    <string name="dialogexit_title">退出程序</string>
    <string name="dialogexit_message">您确定要退出程序吗？</string>
    <string name="dialogexit_exit_button">退出</string>
    <string name="dialogexit_noexit_button">点错了，别关</string>
    <string name="dialogpassword_title">请输入管理员密码</string>
    <string name="dialogpassword_login_button">登录</string>
    <string name="dialogpassword_cancel_button">取消</string>
    <string name="registernewuseractivity_textview_userno">工号</string>
    <string name="registernewuseractivity_textview_username">姓名</string>
    <string name="registernewuseractivity_textview_userpassword">密码</string>
    <string name="registernewuseractivity_textview_userconfirmpassword">确认密码</string>
    <string name="registernewuseractivity_textview_usercellphone">手机号码</string>
    <string name="registernewuseractivity_button_nextstep">下一步</string>
    <string name="registernewuseractivity_label_title">注册用户</string>
    <string name="nav_call">手机</string>
    <string name="nav_location">地址</string>
    <string name="nav_mail">邮箱</string>
    <string name="nav_config">修改信息</string>
    <string name="nav_close">注销</string>
    <string name="adminmainpage_label">管理员模式</string>
    <string name="adminconfig_label">修改管理员信息</string>
    <string name="adminconfig_name_text">姓名</string>
    <string name="adminconfig_password_text">密码</string>
    <string name="adminconfig_confirmpassword_text">确认密码</string>
    <string name="adminconfig_phonenumber_text">手机</string>
    <string name="adminconfig_location_text">地址</string>
    <string name="adminconfig_mail_text">邮箱</string>
    <string name="adminconfig_saveconfig_button">保存修改</string>
    <string name="adminmainactivity_button_noticemanage">通知管理</string>
    <string name="adminmainactivity_button_history">识别记录</string>
    <string name="adminmainactivity_button_usermanage">用户管理</string>
    <string name="adminmainactivity_button_approveregister">审批注册</string>
    <string name="adminnotice_label">通知管理</string>
    <string name="adminnotice_edit">编辑</string>
    <string name="adminnotice_delete">删除</string>
    <string name="adminnotice_add">添加新通知</string>
    <string name="adminnoticeedit_label">编辑公告</string>
    <string name="adminnoticeedit_savechange_button">保存修改</string>
    <string name="registerresultactivity_label_title">注册结果</string>
    <string name="adminusermanageactivity_label_title">用户管理</string>
    <string name="adminuserdetialactivity_label_title">用户详情</string>
    <string name="adminuserdetialactivity_textview_userno">工号</string>
    <string name="adminuserdetialactivity_textview_username">姓名</string>
    <string name="adminuserdetialactivity_textview_usercellphone">手机号码</string>
    <string name="adminuserapproveactivity_label_title">审批注册</string>
    <string name="adminapprovedetailactivity_label_title">注册详情</string>
    <string name="calculateactivity_label_title">识别结果</string>
    <string name="resultactivity_label_title">识别结果</string>
    <string name="passwordloginactivity_label_title">使用密码</string>
    <string name="historyactivity_label_title">识别记录</string>
</resources>
