<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/nav_call"
            android:title="@string/nav_call"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/nav_location"
            android:title="@string/nav_location" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/nav_mail"
            android:title="@string/nav_mail"/>
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/nav_config"
            android:title="@string/nav_config"/>
        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/nav_close"
            android:title="@string/nav_close"/>
    </group>
</menu>