<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_no_admin_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.ecust.faceaccesscontrol.activity.NoAdminMainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/noadminmainactivity_toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/keepBrown"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <Button
                android:id="@+id/noadminmainactivity_button_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/noadminmainactivity_button_register"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:text="@string/noadminmainactivity_button_register"
                android:textColor="#f96300"/>

            <Button
                android:id="@+id/noadminmainactivity_button_recognize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/noadminmainactivity_button_recognize"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:text="@string/noadminmainactivity_button_recognize"
                android:textColor="#f96300"/>

            <Button
                android:id="@+id/noadminmainactivity_button_adminlogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/noadminmainactivity_button_adminlogin"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:text="@string/noadminmainactivity_button_adminlogin"
                android:textColor="#f96300"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/noadminmainactivity_textview_noticebar"/>

                <ListView
                    android:id="@+id/noadminmainactivity_listview_notice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></ListView>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/noadminmainactivity_floatingactionbutton_admininfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_admin"/>

                <TextView
                    android:id="@+id/noadminmainactivity_textview_admininfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="right"
                    android:layout_toLeftOf="@+id/noadminmainactivity_floatingactionbutton_admininfo"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
