<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_new_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.ecust.faceaccesscontrol.activity.RegisterNewUserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registernewuseractivity_toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/keepBrown"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/registernewuseractivity_textview_userno"
                    android:gravity="center_vertical|right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="4">
                <EditText
                    android:id="@+id/registernewuseractivity_edittext_userno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/buttonWhite"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/registernewuseractivity_textview_userno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:gravity="center_vertical|left"
                    android:textColor="@color/red"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/registernewuseractivity_textview_username"
                    android:gravity="center_vertical|right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="4">
                <EditText
                    android:id="@+id/registernewuseractivity_edittext_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/buttonWhite"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/registernewuseractivity_textview_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:gravity="center_vertical|left"
                    android:textColor="@color/red"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/registernewuseractivity_textview_userpassword"
                    android:gravity="center_vertical|right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="4">
                <EditText
                    android:id="@+id/registernewuseractivity_edittext_userpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@color/buttonWhite"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/registernewuseractivity_textview_userpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:gravity="center_vertical|left"
                    android:textColor="@color/red"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/registernewuseractivity_textview_userconfirmpassword"
                    android:gravity="center_vertical|right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="4">
                <EditText
                    android:id="@+id/registernewuseractivity_edittext_userconfirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@color/buttonWhite"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/registernewuseractivity_textview_userconfirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:gravity="center_vertical|left"
                    android:textColor="@color/red"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/registernewuseractivity_textview_usercellphone"
                    android:gravity="center_vertical|right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="4">
                <EditText
                    android:id="@+id/registernewuseractivity_edittext_usercellphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/buttonWhite"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/registernewuseractivity_textview_usercellphone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:gravity="center_vertical|left"
                    android:textColor="@color/red"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="4">
                <Button
                    android:id="@+id/registernewuseractivity_button_nextstep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/buttonWhite"
                    android:text="@string/registernewuseractivity_button_nextstep"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="5">
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
