<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_user_detial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.ecust.faceaccesscontrol.activity.AdminUserDetialActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/adminuserdetailactivity_toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/keepBrown"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/adminuserdetailactivity_imageview_face1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <ImageView
            android:id="@+id/adminuserdetailactivity_imageview_face2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <ImageView
            android:id="@+id/adminuserdetailactivity_imageview_face3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <ImageView
            android:id="@+id/adminuserdetailactivity_imageview_face4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <ImageView
            android:id="@+id/adminuserdetailactivity_imageview_face5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:text="@string/adminuserdetialactivity_textview_userno"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:text="@string/adminuserdetialactivity_textview_username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:text="@string/adminuserdetialactivity_textview_usercellphone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/adminuserdetialactivity_textview_userno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/adminuserdetialactivity_textview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/adminuserdetialactivity_textview_usercellphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/adminuserdetialactivity_button_delete"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_delete"
                        android:layout_margin="16dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
